testing/src/scopeFunction.kt
fun dua() {
    //error
    //contohHelloWorld()
}

fun tiga() {
    //error
    //contohHelloWorld()
}


fun main() {
    fun contohHelloWorld(name: String): Unit {
        println("Hello $name")
    }
    contohHelloWorld("Ikmal Akbar")
}